hover effects and fixed navigation alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,23 +10,47 @@ header {
   z-index: 10;
 }
 
+body {
+  background-image: url("../imgs/background.jpg");
+  background-size: cover;
+}
+
 nav {
   margin: 0;
-  padding: 20px 0;
+  padding-right: 30px;
+  display: inline;
+  float: right;
+}
+
+.name {
+	font-family: 'Raleway';
+	color: #FFF;
+  font-weight: 600;
+  padding-left: 30px;
+  display: inline;
+  float: left;
+  vertical-align: bottom;
+}
+
+
+.navigation {
+	display: inline;
+  font-size: 1.5rem;
 }
 
 nav li {
+  display: inline;
   color: #FFFFFF;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 12px;
-  display: inline-block;
-  width: 80px;
+  width: 100%;
+  text-align: right;
 }
 
 li a {
 	text-decoration: none;
 	color: #FFFFFF;
+  padding: 0 10px;
 }
 
 main {
@@ -36,9 +60,9 @@ main {
 }
 
 main h1 {
-  color: #333;
+  color: #0CFFF4;
   font-family: 'Raleway', sans-serif;
-  font-weight: 600;
+  font-weight: 900;
   font-size: 70px;
   margin-top: 0px;
   padding-top: 80px;
@@ -69,7 +93,7 @@ footer li {
   color: #FFFFFF;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
-  font-size: 12px;
+  font-size: .5rem;
   display: inline-block;
   width: 80px;
 
@@ -77,7 +101,6 @@ footer li {
 
 footer ul {
 	margin: 0 auto;
-	padding: 0 10px;
 	text-align: center;
 	vertical-align: middle;
 }
